INCLUDES = -I${top_srcdir}

libinfinity_adopted_la_CPPFLAGS = \
	$(infinity_CFLAGS)

noinst_LTLIBRARIES = libinfinity_adopted.la

libinfinity_adopted_ladir = $(includedir)/libinfinity-1.0/infinity/adopted

libinfinity_adopted_la_SOURCES = \
	inf-adopted-no-operation.c \
	inf-adopted-operation.c \
	inf-adopted-split-operation.c \
	inf-adopted-state-vector.c \
	inf-adopted-user.c

libinfinity_adopted_la_HEADERS = \
	inf-adopted-no-operation.h \
	inf-adopted-operation.h \
	inf-adopted-split-operation.h \
	inf-adopted-state-vector.h \
	inf-adopted-user.h
