INCLUDES = -I${top_srcdir}

libinfinity_adopted_la_CPPFLAGS = \
	$(infinity_CFLAGS)

noinst_LTLIBRARIES = libinfinity_adopted.la

libinfinity_adopted_ladir = $(includedir)/libinfinity-1.0/infinity/adopted

libinfinity_adopted_la_SOURCES = \
	inf-adopted-algorithm.c \
	inf-adopted-no-operation.c \
	inf-adopted-operation.c \
	inf-adopted-request.c \
	inf-adopted-request-log.c \
	inf-adopted-split-operation.c \
	inf-adopted-state-vector.c \
	inf-adopted-user.c

libinfinity_adopted_la_HEADERS = \
	inf-adopted-algorithm.h \
	inf-adopted-no-operation.h \
	inf-adopted-operation.h \
	inf-adopted-request.h \
	inf-adopted-request-log.h \
	inf-adopted-split-operation.h \
	inf-adopted-state-vector.h \
	inf-adopted-user.h
